--- a/climeo/index.html
+++ b/climeo/index.html
@@ -7,7 +7,7 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
-    <title>Document</title>
+    <title>Climeo: A Climate Change Visualizer</title>
 </head>
 <body class="vsc-initialized">
 
