Add shaders to globe

--- a/climeo/index.html
+++ b/climeo/index.html
@@ -61,11 +61,21 @@
         temperatures warmer than the average(0℃-4.1℃).
     </div>
     <script src="./dist/bundle.js"></script>
-    <div id="explanation">
-        This map is based on open data. The earth map is based on a download from
-        <a href="https://earthobservatory.nasa.gov/">the Nasa Earth observatory</a>
-        The density information was downloaded from
-        <a href="https://sedac.ciesin.columbia.edu/">the SocioEconomic Data and Application Center</a>
-    </div>
 </body>
+<footer>
+        <div id="explanation">
+            <span>
+                <a href="https://github.com/iamtreetop" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/trivta/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://angel.co/u/trivta" target="_blank"><i class="fab fa-angellist"></i></a>
+            </span>
+            <span class="bullet">•</span>
+            <span>Created by Jacky Li</span>
+            <span class="bullet">•</span>
+            <span>
+                Data acquired from from
+                <a href="https://data.giss.nasa.gov/gistemp/" target="_blank">NASA-GISTEMPv4</a>
+            </span>
+        </div>
+</footer>
 </html>
