Add social links to modal and footer

--- a/climeo/index.html
+++ b/climeo/index.html
@@ -33,9 +33,9 @@
                     <div class="modal-icons">
                         <p>Built by Jacky Li</p>
                         <div>
-                            <a href="https://github.com/iamtreetop" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://www.linkedin.com/in/trivta/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://angel.co/u/trivta" target="_blank"><i class="fab fa-angellist"></i></a>
+                            <a href="https://github.com/jackyli97" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/xlihuang/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://angel.co/u/jacky-li-huang" target="_blank"><i class="fab fa-angellist"></i></a>
                         </div>
                     </div>
                 </div>
@@ -65,9 +65,9 @@
 <footer>
         <div id="explanation">
             <span>
-                <a href="https://github.com/iamtreetop" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/trivta/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://angel.co/u/trivta" target="_blank"><i class="fab fa-angellist"></i></a>
+                <a href="https://github.com/jackyli97" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/xlihuang/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://angel.co/u/jacky-li-huang" target="_blank"><i class="fab fa-angellist"></i></a>
             </span>
             <span class="bullet">•</span>
             <span>Created by Jacky Li</span>
