--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="./assets/images/featured-image.png" data-addsearch="no_crop">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen" />
-    <link rel="icon" type="image/png" href="./assets//images/CLIMEO.png">
+    <link rel="icon" type="image/png" href="./assets/images/CLIMEO.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-a11y="true"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
