--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p><span id="intro">Intro: </span>This globe shows the average temperature anomalies over land between the years of 1910 and 2019 in decades. Temperature
                     anomalies are defined by the difference in temperature(Δ℃) at that location between at a given period in time and the
                     average temperature(℃) between the years of 1951 and 1980 (chosen by NASA).</p>
-                    <p><span id="directions">Directions: </span>Travel to a specific period on Earth by clicking on a decade from the list in the middle left; observe how the differences in the temperature spikes.</p>
+                    <p><span id="directions">Directions: </span>Travel to a specific period on Earth by clicking on a decade from the list in the middle left; observe how the differences in the temperature spikes. Hit play for a timelapse.</p>
                     <p><span id="controls">Controls: </span>Drag the mouse to rotate the scene | Drag the slider to scale</p>
                 </div>
 
@@ -46,20 +46,23 @@
     <h1 id="page-header">A Century of Surface Temperature Anomalies</h1>
     <div id="years-box">
         <ul id="years-list">
-            <li id="1910">1910s</li>
-            <li id="1920">1920s</li>
-            <li id="1930">1930s</li>
-            <li id="1940">1940s</li>
-            <li id="1980">1980s</li>
-            <li id="1990">1990s</li>
-            <li id="2000">2000s</li>
-            <li id="2010">2010s</li>
+            <li id="1910"><i class="fas fa-check-square" id="checked"></i>1910s</li>
+            <li id="1920"><i class="fas fa-check-square" id="checked"></i>1920s</li>
+            <li id="1930"><i class="fas fa-check-square" id="checked"></i>1930s</li>
+            <li id="1940"><i class="fas fa-check-square" id="checked"></i>1940s</li>
+            <li id="1980"><i class="fas fa-check-square" id="checked"></i>1980s</li>
+            <li id="1990"><i class="fas fa-check-square" id="checked"></i>1990s</li>
+            <li id="2000"><i class="fas fa-check-square" id="checked"></i>2000s</li>
+            <li id="2010"><i class="fas fa-check-square" id="checked"></i>2010s</li>
         </ul>
     </div>
     <div id="instructions-one-box">
         The color and height of the spikes are jointly scaled to show how much average temperature(℃) has changed from the
         1951-1980 average. Blues and purples(-4.1℃-0℃), shows temperatures cooler than the average while reds, yellows and oranges show
         temperatures warmer than the average(0℃-4.1℃).
+    </div>
+    <div id="play-button">
+        <i class="far fa-play-circle"></i>
     </div>
     <script src="./dist/bundle.js"></script>
 </body>
