--- a/chrome_extensions/hello_world/popup.html
+++ b/chrome_extensions/hello_world/popup.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <title>Hello World</title>
+        <script src="jquery.min.js"></script>
+        <script src="popup.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h2 id="greet">Hello World</h2>
+        <h2 id="greet">Hello World!</h2>
+        <input type="text" id="name">
     </body>
 </html>
