--- a/chrome_extensions/page_font_style/popup.html
+++ b/chrome_extensions/page_font_style/popup.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <input type="text" id="fontColor" data-jscolor="">
+    <input type="text" id="fontColor" data-jscolor="" value="ffcc00">
     <input type="submit" id="btnChange" value="Change">
 </body>
 </html>
